deployment-pipeline/k8s/kk-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kk-api
  namespace: kijani-project
  labels:
    app: kk-api
    component: api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: kk-api
  template:
    metadata:
      labels:
        app: kk-api
        component: api
    spec:
      containers:
        - name: kk-api
          image: nginx:alpine
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
