deployment-pipeline/k8s/kk-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kk-api
  namespace: kijani-project
  labels:
    app: kk-api
    component: api
spec:
  type: ClusterIP
  selector:
    app: kk-api
  ports:
    - name: http
      port: 8080        # port other services use to reach this Service
      targetPort: 80    # port that the Nginx container actually listens on
      protocol: TCP
