deployment-pipeline/k8s/kk-payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kk-payments
  namespace: kijani-project
  labels:
    app: kk-payments
    component: payments
spec:
  type: ClusterIP
  selector:
    app: kk-payments
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
